apply plugin: 'java'
apply plugin: 'idea'

group 'coppercoder'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
  implementation 'org.objenesis:objenesis:3.0.1'
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
  testImplementation 'org.xmlunit:xmlunit-core:2.6.3'
  testImplementation 'org.assertj:assertj-core:3.12.2'
  //testImplementation 'org.mockito:mockito-core:2.+'
  //testImplementation 'org.mockito:mockito-junit-jupiter:2.+'
}
